2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JTextField.java:
	Resynced with GNU Classpath.

	2004-12-22  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JTextField.java (getPreferredSize):
	Re-implemented.

2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/plaf/basic/BasicEditorPaneUI.java:
	Resynced with GNU Classpath.

	2004-12-22  Michael Koch  <konqueror@gmx.de>

	* javax/swing/plaf/basic/BasicEditorPaneUI.java: New file.
	
2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JLabel.java:
	Resynced with GNU Classpath.

	2004-12-21  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JLabel.java (setDisplayedMnemoic):
	Make text upper case before searching mnemonic character.
	
2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JLabel.java:
	Resynced with GNU Classpath.
	
	2004-12-21  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JLabel.java
	(setDisplayedMnemonicIndex): Handle index == -1 and fire
	PropertyChangeEvent after property got set to the new index.
	(setDisplayedMnemonic): Use only upper case characters.
	
2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JApplet.java,
	libraries/javalib/javax/swing/JInternalFrame.java,
	libraries/javalib/javax/swing/JWindow.java:
	Resynced with GNU Classpath.

	2004-12-21  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JFrame.java
	(setDefaultLookAndFeelDecorated): Removed wrong code again.
	* javax/swing/JInternalFrame.java
	(setDefaultCloseOperation): Fixed typo.

	2004-12-21  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JApplet.java
	(HIDE_ON_CLOSE): Removed.
	(EXIT_ON_CLOSE): Likewise.
	(DISPOSE_ON_CLOSE): Likewise.
	(DO_NOTHING_ON_CLOSE): Likewise.
	(close_action): Likewise.
	(getDefaultCloseOperation): Likewise.
	(setDefaultCloseOperation): Likewise.
	(processWindowEvent): Likewise.
	(getPreferredSize): Simplified.
	* javax/swing/JDialog.java