@@ -1,5 +1,17 @@
 2004-12-22  Dalibor Topic  <robilad@kaffe.org>
 
+	* libraries/javalib/javax/swing/JFileChooser.java:
+	Resynced with GNU Classpath.
+	
+	2004-12-22  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/JFileChooser.java
+	(showDialog): Return CANCEL_OPTION for now.
+	(showOpenDialog): Likewise.
+	(showSaveDialog): Likewise.
+	
+2004-12-22  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/javax/swing/JTextField.java:
 	Resynced with GNU Classpath.
 
